--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Tharmsy.xyz">
+    <meta property="og:title" content="levv.tk">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Tharmsy.xyz, my bio">
-    <meta name="description" content="harmsy.xyz, my bio">
-    <meta property="og:url" content="https://harmsy.xyz/">
+    <meta property="og:description" content="levv.tk, my bio">
+    <meta name="description" content="levv.tk, my bio">
+    <meta property="og:url" content="levv.tk/">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Tharmsy.xyz | 0.1</title>
+    <title>lev's bio</title>
 </head>
 <body>
     <div class="container">
@@ -31,20 +31,18 @@
         <div class="glass">
             <h1>Tharmsy.</h1>
             <div class="social-icons">
-                <a target="_blank" title="@Tharmsy"><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
-                <a target="_blank" title="Tharmsy"><i id="discord" class="fa-brands fa-discord"></i></a>
-                <a href="https://www.youtube.com/@Tharmsy/" target="_blank" title="@Tharmsy"><i id="youtube" class="fa-brands fa-youtube"></i></a>
-                <a href="https://twitter.com/Tharmsy" target="_blank" title="@Tharmsy"><i id="twitter" class="fa-brands fa-twitter"></i></a>
-                <a href="https://github.com/TharmsyXD" target="_blank" title="@TharmsyXD"><i id="github" class="fa-brands fa-github"></i></a>
+                <a target="_blank" title="@levsexy"><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
+                <a target="_blank" title="cryptoscam"><i id="discord" class="fa-brands fa-discord"></i></a>
+                <a href="https://www.youtube.com/@bitcoinscam." target="_blank" title="@Tharmsy"><i id="youtube" class="fa-brands fa-youtube"></i></a>
             </div>
-            <p><span class="wave">👋</span> hello, I'm Tharmsy, <span class="auto-type"></span></p>
-            <p><span class="wave"></span> Credit to wearish i remade his website<span class="auto-type"></span></p>
+            <p><span class="wave">👋</span> hi, its me lev <span class="auto-type"></span></p>
+            <p><span class="wave"></span> random guy idk<span class="auto-type"></span></p>
         </div>
         
     </div>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Owner On PhoenixCraft", "staff on dk4kja8", "Developer of Doom Client", "Owner On PhoenixCraft", "staff on dk4kja8", "Developer of Doom Client", "wner On PhoenixCraft", "staff on dk4kja8", "Developer of Doom Client", "wner On PhoenixCraft", "staff on dk4kja8"],
+            strings: ["cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev, "cyrus dev", "dev n admin @ mcc central"],
             typeSpeed: 150,
             backSpeed: 100,
             looped: true
