--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <li></li>
         </ul>
         <div class="glass">
-            <h1>Tharmsy.</h1>
+            <h1>cryptoscam (Lev)</h1>
             <div class="social-icons">
                 <a target="_blank" title="@levsexy"><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
                 <a target="_blank" title="cryptoscam"><i id="discord" class="fa-brands fa-discord"></i></a>
-                <a href="https://www.youtube.com/@bitcoinscam." target="_blank" title="@Tharmsy"><i id="youtube" class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.youtube.com/@bitcoinscam." target="_blank" title="@bitcoinscam."><i id="youtube" class="fa-brands fa-youtube"></i></a>
             </div>
             <p><span class="wave">👋</span> hi, its me lev <span class="auto-type"></span></p>
             <p><span class="wave"></span> random guy idk<span class="auto-type"></span></p>
