--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev, "cyrus dev", "dev n admin @ mcc central"],
+            strings: ["cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev", "dev n admin @ mcc central", "cyrus dev, "dev n admin @ mcc central"],
             typeSpeed: 150,
             backSpeed: 100,
             looped: true
