--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://www.youtube.com/@bitcoinscam." target="_blank" title="@bitcoinscam."><i id="youtube" class="fa-brands fa-youtube"></i></a>
             </div>
             <p><span class="wave">👋</span> hi, its me lev <span class="auto-type"></span></p>
-            <p><span class="wave"></span> random guy idk<span class="auto-type"></span></p>
+            <p><span class="wave"></span> minecraft cheating shit, admin n dev @ mcc central, 2.03k on yt, i code in java and find bypasses for block game antihakes <span class="auto-type"></span></p>
         </div>
         
     </div>
