--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <li></li>
         </ul>
         <div class="glass">
-            <h1>cryptoscam (Lev)</h1>
+            <h1>cryptoscammmed (Lev)</h1>
             <div class="social-icons">
                 <a target="_blank" title="@cryptoscammed"><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
                 <a target="_blank" title="cryptoscammed"><i id="discord" class="fa-brands fa-discord"></i></a>
                 <a href="https://www.youtube.com/@cryptoscammed" target="_blank" title="@cryptoscammed"><i id="youtube" class="fa-brands fa-youtube"></i></a>
             </div>
             <p><span class="wave">👋</span> hi, its me lev <span class="auto-type"></span></p>
-            <p><span class="wave"></span> minecraft cheating, admin n dev @ mcc central, 2.03k on yt, idek what else to say here <span class="auto-type"></span></p>
+            <p><span class="wave"></span> minecraft cheating, admin n dev @ mcc, 2k+ on yt, owner at arc gen <span class="auto-type"></span></p>
         </div>
         
     </div>
