--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="levv.tk">
+    <meta property="og:title" content="lev's bio">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="levv.tk, my bio">
+    <meta property="og:description" content="lev's bio">
     <meta name="description" content="levv.tk, my bio">
     <meta property="og:url" content="levv.tk/">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -29,11 +29,11 @@
             <li></li>
         </ul>
         <div class="glass">
-            <h1>cryptoscammmed (Lev)</h1>
+            <h1>levtokyo</h1>
             <div class="social-icons">
                 <a target="_blank" title="@cryptoscammed"><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
-                <a target="_blank" title="cryptoscammed"><i id="discord" class="fa-brands fa-discord"></i></a>
-                <a href="https://www.youtube.com/@cryptoscammed" target="_blank" title="@cryptoscammed"><i id="youtube" class="fa-brands fa-youtube"></i></a>
+                <a target="_blank" title="levtokyo"><i id="discord" class="fa-brands fa-discord"></i></a>
+                <a href="https://www.youtube.com/@levtokyo" target="_blank" title="@levtokyo"><i id="youtube" class="fa-brands fa-youtube"></i></a>
             </div>
             <p><span class="wave">👋</span> hi, its me lev <span class="auto-type"></span></p>
             <p><span class="wave"></span> minecraft cheating, admin n dev @ mcc, 2k+ on yt, owner at arc gen <span class="auto-type"></span></p>
