--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@ credits of some of the css goes to them <3 -->
             class="icon fa-brands fa-discord"></i></a>
         <a href="https://youtube.com/@levtokyo" class="social-link" title="youtube" style="font-size:28px"><i
             class="icon fa-brands fa-chrome"></i></a>
-        <p>"i have power, but i wont abuse it"
-dev n admin@ mcc’s archive (2.4k+)
-https://youtube.com/@levtokyo
-https://discord.gg/tyt9AG93Sa
-https://only-fans.uk/lev</p>
+        <p>"i have power, but i wont abuse it", dev n admin@ mcc’s archive (2.4k+), https://youtube.com/@levtokyo, https://discord.gg/tyt9AG93Sa,</p>
       </div>
     </div>
   </div>
