--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ credits of some of the css goes to them <3 -->
     </div>
   </div>
   <audio loop="true" id="audio">
-    <source src="assets/audio/drowning.mp3" type="audio/mp3">
-    <source src="assets/audio/drowning.mp3" type="audio/ogg">
+    <source src="assets/audio/none-funeral.mp3" type="audio/mp3">
+    <source src="assets/audio/none-funeral.mp3" type="audio/ogg">
   </audio>
   <script src="assets/javascript/audio.js"></script>
   <script src="assets/javascript/enter.js"></script>
