--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ credits of some of the css goes to them <3 -->
     align-items: center;
     text-align: center;
     min-height: 100vh;
-    background: url("https://i.pinimg.com/originals/1a/a2/00/1aa2008c04d15f46d38b797cb1452ed4.gif") no-repeat center center fixed;
+    background: url("https://gifdb.com/images/high/anime-bamboo-forest-background-5rx5lwev45pcnpaf.gif") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
